[gd_scene load_steps=14 format=3 uid="uid://iwahnyaabkrj"]

[ext_resource type="Script" uid="uid://c31ekdmw6kmls" path="res://Scripts/blast_area.gd" id="1_cvv4h"]
[ext_resource type="AudioStream" uid="uid://bmm8vt8k8vrfu" path="res://Assets/Sounds/explosion.wav" id="2_2nfe6"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_tlxcb"]
height = 1.0

[sub_resource type="Animation" id="Animation_xm76m"]
resource_name = "BlastGrow"
length = 0.25
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:shape:radius")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.5, 2.52]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("OmniLight3D:light_energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0624364, 0.25),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 10.0, 0.0]
}

[sub_resource type="Animation" id="Animation_3pxtn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:shape:radius")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("OmniLight3D:light_energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p4w1k"]
_data = {
&"BlastGrow": SubResource("Animation_xm76m"),
&"RESET": SubResource("Animation_3pxtn")
}

[sub_resource type="Gradient" id="Gradient_rf0wk"]
offsets = PackedFloat32Array(0, 0.43956, 1)
colors = PackedColorArray(2, 2, 2, 1, 2, 0.68, 0.337, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_fgscc"]
gradient = SubResource("Gradient_rf0wk")
use_hdr = true

[sub_resource type="Curve" id="Curve_opq6n"]
_data = [Vector2(0, 0.443614), 0.0, 0.0, 0, 0, Vector2(0.230769, 0.973505), 0.0, 0.0, 0, 0, Vector2(0.687657, 0.963415), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_labbc"]
curve = SubResource("Curve_opq6n")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_blydi"]
direction = Vector3(0, 1, 0)
spread = 90.0
initial_velocity_min = 6.0
initial_velocity_max = 6.0
scale_curve = SubResource("CurveTexture_labbc")
color_ramp = SubResource("GradientTexture1D_fgscc")
hue_variation_min = -0.02
hue_variation_max = 0.11

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_nu5x1"]
shading_mode = 0
vertex_color_use_as_albedo = true

[sub_resource type="SphereMesh" id="SphereMesh_sci5w"]
material = SubResource("StandardMaterial3D_nu5x1")
radial_segments = 8
rings = 5

[node name="BlastArea" type="Area3D"]
collision_mask = 7
script = ExtResource("1_cvv4h")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CylinderShape3D_tlxcb")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_p4w1k")
}
autoplay = "BlastGrow"

[node name="GPUParticles3D" type="GPUParticles3D" parent="."]
emitting = false
amount = 48
lifetime = 0.5
one_shot = true
speed_scale = 2.0
explosiveness = 1.0
fixed_fps = 60
process_material = SubResource("ParticleProcessMaterial_blydi")
draw_pass_1 = SubResource("SphereMesh_sci5w")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
light_energy = 0.0

[node name="Explosion" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_2nfe6")
autoplay = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
